--- a/macSVG/Base.lproj/MacSVGDocument.xib
+++ b/macSVG/Base.lproj/MacSVGDocument.xib
@@ -368,7 +368,7 @@
                                                                                                             </subviews>
                                                                                                         </tableCellView>
                                                                                                         <tableCellView identifier="TextIconCellView" id="DA9-fx-Ymh">
-                                                                                                            <rect key="frame" x="41" y="17" width="18" height="17"/>
+                                                                                                            <rect key="frame" x="41" y="18" width="18" height="17"/>
                                                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                                             <subviews>
                                                                                                                 <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IAY-G1-Y3N" customClass="TextIconView">
@@ -378,7 +378,7 @@
                                                                                                             </subviews>
                                                                                                         </tableCellView>
                                                                                                         <tableCellView identifier="TargetIconCellView" id="H4i-b5-dba">
-                                                                                                            <rect key="frame" x="41" y="34" width="18" height="17"/>
+                                                                                                            <rect key="frame" x="41" y="36" width="18" height="17"/>
                                                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                                             <subviews>
                                                                                                                 <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5ow-lF-w8K" customClass="TargetIconView">
@@ -2042,11 +2042,11 @@
                     <tabViewItems>
                         <tabViewItem label="Selection" identifier="2" id="jcf-Wo-jq6">
                             <view key="view" id="QF8-Ft-nhl">
-                                <rect key="frame" x="10" y="25" width="361" height="197"/>
+                                <rect key="frame" x="10" y="29" width="361" height="193"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HZ7-uf-0LA">
-                                        <rect key="frame" x="18" y="151" width="44" height="23"/>
+                                        <rect key="frame" x="18" y="147" width="44" height="23"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
@@ -2054,7 +2054,7 @@
                                         </connections>
                                     </colorWell>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W6J-C6-SQs">
-                                        <rect key="frame" x="15" y="177" width="114" height="14"/>
+                                        <rect key="frame" x="15" y="173" width="114" height="14"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Selection Rectangle" id="Ues-LS-kny">
                                             <font key="font" metaFont="smallSystemBold"/>
@@ -2063,7 +2063,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t6R-7H-HJI">
-                                        <rect key="frame" x="67" y="157" width="83" height="14"/>
+                                        <rect key="frame" x="67" y="153" width="83" height="14"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Stroke Color" id="FRl-pY-vXJ">
                                             <font key="font" metaFont="controlContent" size="11"/>
@@ -2072,7 +2072,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m3p-3u-QYf">
-                                        <rect key="frame" x="255" y="157" width="85" height="14"/>
+                                        <rect key="frame" x="255" y="153" width="85" height="14"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Stroke Width" id="NCX-6E-dOH">
                                             <font key="font" metaFont="controlContent" size="11"/>
@@ -2081,7 +2081,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Os-Iw-J64">
-                                        <rect key="frame" x="235" y="152" width="15" height="22"/>
+                                        <rect key="frame" x="235" y="148" width="15" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <stepperCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="100" id="Erm-8t-CR2"/>
                                         <connections>
@@ -2089,7 +2089,7 @@
                                         </connections>
                                     </stepper>
                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tk8-sv-aUL">
-                                        <rect key="frame" x="178" y="154" width="51" height="19"/>
+                                        <rect key="frame" x="178" y="150" width="51" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="right" title="1" drawsBackground="YES" id="gt5-E2-GcO">
                                             <font key="font" metaFont="controlContent" size="11"/>
@@ -2102,7 +2102,7 @@
                                         </connections>
                                     </textField>
                                     <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n2V-zE-nCv">
-                                        <rect key="frame" x="17" y="103" width="44" height="23"/>
+                                        <rect key="frame" x="17" y="99" width="44" height="23"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
@@ -2110,7 +2110,7 @@
                                         </connections>
                                     </colorWell>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r10-ny-kRp">
-                                        <rect key="frame" x="14" y="129" width="110" height="14"/>
+                                        <rect key="frame" x="14" y="125" width="110" height="14"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Selection Handles" id="ZGg-Vo-xB2">
                                             <font key="font" metaFont="smallSystemBold"/>
@@ -2119,7 +2119,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O2Q-FJ-Ezo">
-                                        <rect key="frame" x="66" y="109" width="87" height="14"/>
+                                        <rect key="frame" x="66" y="105" width="87" height="14"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Handle Color" id="9hx-Ey-mdx">
                                             <font key="font" metaFont="controlContent" size="11"/>
@@ -2128,7 +2128,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pnK-qT-j4p">
-                                        <rect key="frame" x="254" y="109" width="78" height="14"/>
+                                        <rect key="frame" x="254" y="105" width="78" height="14"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Handle Size" id="LKV-7Q-gb4">
                                             <font key="font" metaFont="controlContent" size="11"/>
@@ -2137,7 +2137,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h4s-iT-Fk7">
-                                        <rect key="frame" x="234" y="104" width="15" height="22"/>
+                                        <rect key="frame" x="234" y="100" width="15" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <stepperCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="100" id="vhE-Gz-IW8"/>
                                         <connections>
@@ -2145,7 +2145,7 @@
                                         </connections>
                                     </stepper>
                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VFS-lJ-WuQ">
-                                        <rect key="frame" x="177" y="106" width="51" height="19"/>
+                                        <rect key="frame" x="177" y="102" width="51" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="right" title="1" drawsBackground="YES" id="PKk-j0-1Jw">
                                             <font key="font" metaFont="controlContent" size="11"/>
@@ -2158,7 +2158,7 @@
                                         </connections>
                                     </textField>
                                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nEi-yh-Uu2">
-                                        <rect key="frame" x="15" y="61" width="163" height="20"/>
+                                        <rect key="frame" x="15" y="57" width="163" height="20"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <buttonCell key="cell" type="check" title="Checkerboard Background" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="WXh-FB-iTH">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -2169,7 +2169,7 @@
                                         </connections>
                                     </button>
                                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KAC-T8-kjZ">
-                                        <rect key="frame" x="15" y="36" width="279" height="20"/>
+                                        <rect key="frame" x="15" y="32" width="279" height="20"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <buttonCell key="cell" type="check" title="Validate Element Placement with SVG DTD Rules" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="3Fy-0s-dw8">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -2502,14 +2502,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" drawsBackground="NO" id="ZgR-se-6gy">
                             <rect key="frame" x="1" y="1" width="438" height="191"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" findStyle="panel" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" id="NmF-6Q-pjy">
                                     <rect key="frame" x="0.0" y="0.0" width="423" height="191"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="423" height="191"/>
+                                    <size key="minSize" width="438" height="191"/>
                                     <size key="maxSize" width="463" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
